<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".Customer_Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/texttitlesize1"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:src="@drawable/cart_white" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="10pt"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="32dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/logindetails"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_xmedium"/>

            <TextView
                android:id="@+id/login_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/logindetails1"
                android:textAlignment="textStart"
                android:textSize="@dimen/text_size_xmedium"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="32dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/country_code_text"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:fontFamily="@font/open_sans_semibold"
                    android:background="@drawable/text_input_bg"
                    android:inputType="number"
                    android:padding="16dp"
                    android:text="@string/country"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_xmedium" />


                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="77dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="32dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="25dp"
                        android:maxLength="10"
                        android:fontFamily="@font/open_sans_semibold"
                        android:background="@drawable/text_input_bg"
                        android:inputType="number"
                        android:padding="16dp"
                        android:hint="@string/loginhint"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_xmedium"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/generate_btn"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/primary_btn_bg"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/otp_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/login_progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/purple_500"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/generate_btn" />

            <TextView
                android:id="@+id/login_form_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans_semibold"
                android:text="Working . . ."
                android:textSize="@dimen/text_size_xmedium"
                android:textColor="@color/purple_500"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_progress_bar" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>