<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="@dimen/text_size_large"
    android:elevation="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:background="@color/Gray1"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:layout_marginTop="12dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/floating_label_text_size"
                android:layout_marginTop="10dp"
                android:text="@string/MyOrders"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000" />

            <View
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewName" />

            <TextView
                android:id="@+id/myorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:textAllCaps="true"
                android:text="View All Orders"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_constraintTop_toBottomOf="@+id/divider9" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:layout_marginTop="12dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/floating_label_text_size"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/Mycart"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000" />

            <View
                android:id="@+id/divider91"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewName1" />

            <TextView
                android:id="@+id/mycart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:textAllCaps="true"
                android:text="View All Carts"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_constraintTop_toBottomOf="@+id/divider91" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/card_view1"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:layout_marginTop="12dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/floating_label_text_size"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/MyWishlist"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000" />

            <View
                android:id="@+id/divider911"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewName11" />

            <TextView
                android:id="@+id/mywishlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:textColor="@color/purple_500"
                android:layout_marginEnd="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="View All Wishlist"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_constraintTop_toBottomOf="@+id/divider911" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>